@@ -5,6 +5,8 @@ Revision history for CHI-Driver-BerkeleyDB
 {{$NEXT}}
     - Replace Moose with Moo, which CHI already requires.
     - POD doc updates.
+    - Fix noisy die with error "BDB0062 Successful return: 0" when calling
+      remove() on a non-existing key [RT #103290]
 
 0.04  2018-06-13
     - New Maintainer: Michael Schout <mschout@cpan.org>
